# github-echo

./: .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  MANIFEST.in  Pipfile  README.md  _config.py  _constants.py  _main.py  _scripts.py  main.py  pyproject.toml  pyproject_old.toml  ruff.toml
.github/workflows/: ci.yml
_docs/: distribution_commands.md  linting.md  resources.md  test_coverage.md  using_pipenv.md  using_poetry.md
_examples/: README.md
application/core/: gemini_model.py  github_api.py
application/core/models/: gemini_model.py  groq_model.py
application/utils/: api.py  callbacks.py  gemini_config.py  gemini_model.py  helpers.py  model_config.py  parser.py  validation.py
tests/: conftest.py  fixtures.py
tests/integration/: test_cli_features.py
tests/unit/: test_cli_features.py  test_llm_response.py  test_parser.py  test_validation.py
