[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "github-echo"
version = "0.0.1"
authors = [
  { name="Aryan Khurana", email="aryankhurana1511@gmail.com" },
]
description = "A command-line tool built to obtain in-depth, actionable information about GitHub repositories."
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["GitHub", "GenAI", "Python3", "CLI"]
dependencies = [
  "annotated-types==0.7.0",
  "anyio==4.4.0",
  "backports.tarfile==1.2.0",
  "build==1.2.2",
  "cachetools==5.5.0",
  "certifi==2024.8.30",
  "charset-normalizer==3.3.2",
  "click==8.1.7",
  "docutils==0.21.2",
  "google-ai-generativelanguage==0.6.6",
  "google-api-core==2.19.2",
  "google-api-python-client==2.144.0",
  "google-auth==2.34.0",
  "google-auth-httplib2==0.2.0",
  "google-generativeai==0.7.2",
  "googleapis-common-protos==1.65.0",
  "grpcio==1.66.1",
  "grpcio-status==1.62.3",
  "h11==0.14.0",
  "httpcore==1.0.5",
  "httplib2==0.22.0",
  "httpx==0.27.2",
  "idna==3.8",
  "importlib_metadata==8.4.0",
  "jaraco.classes==3.4.0",
  "jaraco.context==6.0.1",
  "jaraco.functools==4.0.2",
  "keyring==25.3.0",
  "markdown-it-py==3.0.0",
  "mdurl==0.1.2",
  "more-itertools==10.5.0",
  "nh3==0.2.18",
  "numpy==2.1.1",
  "packaging==24.1",
  "pkginfo==1.10.0",
  "proto-plus==1.24.0",
  "protobuf==4.25.4",
  "pyasn1==0.6.0",
  "pyasn1_modules==0.4.0",
  "pydantic==2.9.0",
  "pydantic_core==2.23.2",
  "Pygments==2.18.0",
  "pyparsing==3.1.4",
  "pyproject_hooks==1.1.0",
  "python-dateutil==2.9.0.post0",
  "python-dotenv==1.0.1",
  "pytz==2024.1",
  "readme_renderer==44.0",
  "requests==2.32.3",
  "requests-toolbelt==1.0.0",
  "rfc3986==2.0.0",
  "rich==13.8.0",
  "rsa==4.9",
  "ruff==0.6.4",
  "shellingham==1.5.4",
  "six==1.16.0",
  "sniffio==1.3.1",
  "tomli==2.0.1",
  "tqdm==4.66.5",
  "twine==5.1.1",
  "typer==0.12.5",
  "typing_extensions==4.12.2",
  "tzdata==2024.1",
  "uritemplate==4.1.1",
  "urllib3==2.2.2",
  "zipp==3.20.1"
]

[project.urls]
Homepage = "https://github.com/AryanK1511/github-echo"
Issues = "https://github.com/AryanK1511/github-echo/issues"

[tool.setuptools]
packages = ["application", "application.utils", "application.core"]
include-package-data = true
py-modules = ["_main", "_config"]

[tool.setuptools.package-data]
application = ["*.txt", "*.md"]

[project.scripts]
gh-echo = "_main:app"
